# agent

./: .gitignore  CLAUDE.md
idt/: .env.example  .gitignore  CLAUDE _backup.md  CLAUDE.md  pyproject.toml  run_server.py  temp_schema.txt
idt/.bkit/runtime/: agent-state.json
idt/.bkit/snapshots/: snapshot-1773670424431.json  snapshot-1773727670386.json  snapshot-1773985594497.json  snapshot-1774072377429.json  snapshot-1774079879981.json  snapshot-1774329543923.json  snapshot-1774359893867.json  snapshot-1775977850170.json  snapshot-1776501394118.json  snapshot-1776922453681.json  snapshot-1777195243234.json  snapshot-1777280384802.json  snapshot-1777371519137.json  snapshot-1777374759752.json  snapshot-1778500513762.json  snapshot-1778509860743.json  snapshot-1778655775215.json  snapshot-1778679446205.json  snapshot-1778679723113.json  snapshot-1778680488113.json  snapshot-1778736100708.json  snapshot-1778756379565.json  snapshot-1778815207147.json  snapshot-1778925297460.json  snapshot-1779098993682.json  snapshot-1779188301785.json  snapshot-1779330788059.json  snapshot-1779330864628.json  snapshot-1780117299428.json  snapshot-1780463230755.json  snapshot-1783660778414.json  snapshot-1783660889856.json  snapshot-1783660984734.json  snapshot-1784505264850.json
idt/.bkit/state/: memory.json  pdca-status.json
idt/.claude/: settings.local.json
idt/.claude/commands/: gen-seed.md  (+1 more)
idt/alembic/: env.py
idt/docs/: API.md  PORTFOLIO.md  general-chat-api.html  index.html  llm-model-registry.html  openapi-general-chat.yaml  openapi-llm-model.yaml  openapi.yaml  skills.md  task-registry.md
idt/scripts/: migrate_doc_metadata.py  migrate_es_nori.py  seed_test_users.sql  verify_mcp_connections.py
idt/src/: config.py
(+2746 files in other folders)
