[project]
name = "idt"
version = "0.1.0"
description = "FastAPI + LangGraph/LangChain RAG & Agent System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LangChain / LangGraph
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-supervisor>=0.0.31",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.9",
    "alembic>=1.13.0",
    # Vector DB
    "qdrant-client>=1.7.0",
    # HTTP
    "httpx>=0.26.0",
    # PDF Parsing
    "pymupdf>=1.24.0",
    "llama-parse>=0.4.0",
    # Tokenization
    "tiktoken>=0.5.0",
    # LLM Client
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    # Elasticsearch
    "elasticsearch[async]>=8.0.0",
    # Korean Morphological Analyzer
    "kiwipiepy>=0.17.0",
    # HTML to PDF
    "xhtml2pdf>=0.2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
